--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/9f3e1dd7ab.js" crossorigin="anonymous"></script>
 
   <title>FrontEnd</title>  
 </head>
